--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </article>
 
 <script src="js/myScript.js"></script>
+    
+<script>
+/* Her kommer mit script. Dog er det bedst at have ens script i en ekstern fil. 
+Sådan laves en kommentar over flere linjer*/
+    
+//Her er en kommentar på én linje
+</script>
 
 </body>
 </html>
